--- a/main.tex
+++ b/main.tex
@@ -112,8 +112,10 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheadingTwo
-      {University of Virginia (2019 - 2022)}{4.00 / 4.00}
+      {University of Virginia (2019 - 2023)}{4.00 / 4.00}
       \resumeItemListStart
+        \resumeItem{B.S. Computer Science (Expected May 2023)}
+        \resumeItem{B.A. Economics (Expected May 2023)}
         \resumeItem{CS 2150 Program and Data Representation}
       \resumeItemListEnd
 
@@ -152,18 +154,18 @@
   \resumeSubHeadingListStart
   
     \resumeSubheadingTwo
-      {Team Captain / Team America Rocketry Challenge}{Sept 2016 - Present}
+      {Team Captain / Team America Rocketry Challenge}{Sept 2016 - June 2019}
         \resumeItemListStart
             \resumeItem{Led school rocketry team in designing, building, and flying model rockets up to 1000 ft. while carrying a payload}
         \resumeItemListEnd
      \resumeSubheadingTwo
-      {President / School Digital Electronics Club}{Sept 2018 - Present}
+      {President / School Digital Electronics Club}{Sept 2018 - June 2019}
         \resumeItemListStart
             \resumeItem{Developed intelligent light-following robots for Johns Hopkins University Engineering Program}
         \resumeItemListEnd
 
     \resumeSubheadingTwo
-      {Team Captain / American Computer Science League}{Nov 2015 - Present}
+      {Team Captain / American Computer Science League}{Nov 2015 - June 2019}
         \resumeItemListStart
             \resumeItem{Organized and tutored students to compete in CS competition focusing on CS theory and algorithms}
         \resumeItemListEnd
