--- a/main.tex
+++ b/main.tex
@@ -134,9 +134,8 @@
     \resumeSubheadingTwo
       {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
       \resumeItemListStart
-        \resumeItem{Developed databases and front-end software to log network activity and outages}
-        \resumeItem{Communicated with business partners and government agencies to manage contracts}
-        \resumeItem{Worked in business development to secure new government contracts}
+        \resumeItem{Developed SQL databases and front-end software in MS Access to log network activity and outages}
+        \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
       \resumeItemListEnd
 
     \resumeSubheadingTwo
@@ -181,7 +180,7 @@
         \resumeItemListEnd
     \resumeSubheadingTwo{Toxical}{}
         \resumeItemListStart
-            \resumeItem{A neural network to automatically detect and moderate online conversations through sentiment analysis of comments.}
+            \resumeItem{A neural network to automatically detect and moderate online conversations through sentiment analysis of comments with 80\% accuracy.}
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
