--- a/main.tex
+++ b/main.tex
@@ -116,7 +116,11 @@
       \resumeItemListStart
         \resumeItem{B.S. Computer Science (Expected May 2023)}
         \resumeItem{B.A. Economics (Expected May 2023)}
-        \resumeItem{CS 2150 Program and Data Representation}
+        \resumeItem{Relevant coursework:}
+              \resumeItemListStart
+                \resumeItem{CS 2150 Program and Data Representation}
+                \resumeItem{APMA 2120 Multivariable Calculus}
+              \resumeItemListEnd
       \resumeItemListEnd
 
     \resumeSubheadingTwo
