--- a/main.tex
+++ b/main.tex
@@ -122,6 +122,12 @@
                 \resumeItem{APMA 2120 Multivariable Calculus}
               \resumeItemListEnd
       \resumeItemListEnd
+      
+    \resumeSubheadingTwo
+      {Launch Academy at HackCville (2019 - Present)}{}
+      \resumeItemListStart
+        \resumeItem{Studied and applied data science skills through hands-on projects in a selective 16-week intensive program}
+      \resumeItemListEnd
 
     \resumeSubheadingTwo
       {Oakton High School (2015 - 2019)}{4.60 / 4.00}
@@ -211,14 +217,14 @@
   \resumeSubHeadingListEnd
 
 %--------SKILLS------------
-\section{Skills}
- \resumeSubHeadingListStart
-    \resumeSubItem{\textbf{Programming:}}{Python, Java, C/C++}
-    \resumeSubItem{\textbf{Web Development:}}{HTML, CSS, JavaScript}
-    \resumeSubItem{\textbf{Artificial Intelligence/Machine Learning:}}{TensorFlow}
-    \resumeSubItem{\textbf{Databases:}}{MongoDB, Google Firebase}
-    \resumeSubItem{\textbf{Systems:}}{Linux/GNU, Git}
- \resumeSubHeadingListEnd
+% \section{Skills}
+%  \resumeSubHeadingListStart
+%     \resumeSubItem{\textbf{Programming:}}{Python, Java, C/C++}
+%     \resumeSubItem{\textbf{Web Development:}}{HTML, CSS, JavaScript}
+%     \resumeSubItem{\textbf{Artificial Intelligence/Machine Learning:}}{TensorFlow}
+%     \resumeSubItem{\textbf{Databases:}}{MongoDB, Google Firebase}
+%     \resumeSubItem{\textbf{Systems:}}{Linux/GNU, Git}
+%  \resumeSubHeadingListEnd
  
 %-------------------------------------------
 \end{document}
