--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
 %-------------------------------------------
-%%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \begin{document}
@@ -118,8 +118,7 @@
         \resumeItem{B.A. Economics (Expected May 2023)}
         \resumeItem{Relevant coursework:}
               \resumeItemListStart
-                \resumeItem{CS 2150 Program and Data Representation}
-                \resumeItem{APMA 2120 Multivariable Calculus}
+                \resumeItem{CS 2150 Program and Data Representation, CS 4710 Artificial Intelligence}
               \resumeItemListEnd
       \resumeItemListEnd
       
@@ -131,10 +130,10 @@
 
     \resumeSubheadingTwo
       {Oakton High School (2015 - 2019)}{4.60 / 4.00}
-      \resumeItemListStart
-        \resumeItem{AP Computer Science A | Advanced Computer Science AB}
-        \resumeItem{Multivariable Calculus | Linear Algebra}
-      \resumeItemListEnd
+    %   \resumeItemListStart
+    %     \resumeItem{AP Computer Science A | Advanced Computer Science AB}
+    %     \resumeItem{Multivariable Calculus | Linear Algebra}
+    %   \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 
@@ -145,6 +144,7 @@
       {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
       \resumeItemListStart
         \resumeItem{Developed SQL databases and front-end software in MS Access to log network activity and outages}
+        \resumeItem{Built a custom desktop application to create and archive customer quotes and sales}
         \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
       \resumeItemListEnd
 
@@ -159,16 +159,18 @@
   \resumeSubHeadingListEnd
 
 %-----------ACADEMIC EXPERIENCE-----------------
-\section{Academic Experience}
+\section{Extracurriculars}
   \resumeSubHeadingListStart
-  
+        
     \resumeSubheadingTwo
       {Team Captain / Team America Rocketry Challenge}{Sept 2016 - June 2019}
         \resumeItemListStart
-            \resumeItem{Led school rocketry team in designing, building, and flying model rockets up to 1000 ft. while carrying a payload}
+            \resumeItem{Led school rocketry team in designing, building, and flying model rockets up to 1000 ft. while carrying electronics}
+            \resumeItem{Placed 14th in national rocketry competition finals}
         \resumeItemListEnd
+        
      \resumeSubheadingTwo
-      {President / School Digital Electronics Club}{Sept 2018 - June 2019}
+      {President / High School Digital Electronics Club}{Sept 2018 - June 2019}
         \resumeItemListStart
             \resumeItem{Developed intelligent light-following robots for Johns Hopkins University Engineering Program}
         \resumeItemListEnd
@@ -177,6 +179,7 @@
       {Team Captain / American Computer Science League}{Nov 2015 - June 2019}
         \resumeItemListStart
             \resumeItem{Organized and tutored students to compete in CS competition focusing on CS theory and algorithms}
+            \resumeItem{Competed in finals (top 20 teams internationally) for two years}
         \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -186,45 +189,42 @@
   \resumeSubHeadingListStart
     \resumeSubheadingTwo{Pystation}{}
         \resumeItemListStart
-            \resumeItem{Built an internet radio station and DJ software built using the Shout protocol. Features cross-platform usability and powerful controls for DJs, including a 24/7 offline bot streamer.}
+            \resumeItem{Built a public internet radio station and DJ software built using the Shout protocol}
+            \resumeItem{Features cross-platform usability and powerful controls for DJs, including a 24/7 offline bot streamer}
         \resumeItemListEnd
     \resumeSubheadingTwo{Toxical}{}
         \resumeItemListStart
-            \resumeItem{A neural network to automatically detect and moderate online conversations through sentiment analysis of comments with 80\% accuracy.}
+            \resumeItem{Trained a neural network to automatically detect and moderate online conversations on platforms like Twitter and Discord}
+            \resumeItem{Developed a custom sentiment analysis algorithm that detects toxic comments with 80\% accuracy}
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 %--------AWARDS------------
-\section{Awards}
-  \resumeSubHeadingListStart
+% \section{Awards}
+%   \resumeSubHeadingListStart
               
-     \resumeSubheadingTwo
-      {CyberPatriot Platinum Semifinalist}{2018 -- 2019}
-        \resumeItemListStart
-            \resumeItem{Placed in top 10\% of teams in national cybersecurity competition}
-        \resumeItemListEnd
-    \resumeSubheadingTwo
-      {American Computer Science League All-Star}{2017 -- 2018}
-        \resumeItemListStart
-            \resumeItem{Competed in finals (top 20 teams internationally) for two years}
-        \resumeItemListEnd
-    \resumeSubheadingTwo
-      {Team America Rocketry Competition Finalist}{2017}
-        \resumeItemListStart
-            \resumeItem{Placed 14th in national rocketry competition finals}
-        \resumeItemListEnd
+    %  \resumeSubheadingTwo
+    %   {CyberPatriot Platinum Semifinalist}{2018 -- 2019}
+    %     \resumeItemListStart
+    %         \resumeItem{Placed in top 10\% of teams in national cybersecurity competition}
+    %     \resumeItemListEnd
+    % \resumeSubheadingTwo
+    %   {American Computer Science League All-Star}{2017 -- 2018}
+    %     \resumeItemListStart
+    %         \resumeItem{}
+    %     \resumeItemListEnd
+    % \resumeSubheadingTwo
+    %   {Team America Rocketry Competition Finalist}{2017}
+    %     \resumeItemListStart
+    %         \resumeItem{}
+    %     \resumeItemListEnd
         
-  \resumeSubHeadingListEnd
+%   \resumeSubHeadingListEnd
 
 %--------SKILLS------------
-% \section{Skills}
-%  \resumeSubHeadingListStart
-%     \resumeSubItem{\textbf{Programming:}}{Python, Java, C/C++}
-%     \resumeSubItem{\textbf{Web Development:}}{HTML, CSS, JavaScript}
-%     \resumeSubItem{\textbf{Artificial Intelligence/Machine Learning:}}{TensorFlow}
-%     \resumeSubItem{\textbf{Databases:}}{MongoDB, Google Firebase}
-%     \resumeSubItem{\textbf{Systems:}}{Linux/GNU, Git}
-%  \resumeSubHeadingListEnd
- 
+\section{Programming Skills}
+ \resumeSubHeadingListStart
+    \resumeSubItem{\textbf{Python, Java, C/C++, HTML, CSS, JavaScript, SQL, TensorFlow, Linux, Git}}{}
+ \resumeSubHeadingListEnd
 %-------------------------------------------
 \end{document}
