--- a/main.tex
+++ b/main.tex
@@ -189,7 +189,7 @@
   \resumeSubHeadingListStart
     \resumeSubheadingTwo{Pystation}{}
         \resumeItemListStart
-            \resumeItem{Built a public internet radio station and DJ software built using the Shout protocol}
+            \resumeItem{Built a public internet radio station and cross-platform DJ software using the Shout protocol}
             \resumeItem{Features cross-platform usability and powerful controls for DJs, including a 24/7 offline bot streamer}
         \resumeItemListEnd
     \resumeSubheadingTwo{Toxical}{}
