--- a/main.tex
+++ b/main.tex
@@ -144,7 +144,7 @@
       {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
       \resumeItemListStart
         \resumeItem{Developed SQL databases and front-end software in MS Access to log network activity and outages}
-        \resumeItem{Built a custom desktop application to create and archive customer quotes and sales}
+        \resumeItem{Built a custom desktop application to create, archive, and synchronize customer quotes and sales across company computers}
         \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
       \resumeItemListEnd
 
@@ -173,6 +173,7 @@
       {President / High School Digital Electronics Club}{Sept 2018 - June 2019}
         \resumeItemListStart
             \resumeItem{Developed intelligent light-following robots for Johns Hopkins University Engineering Program}
+            \resumeItem{Led a group of 15 students to learn, design, and build printed circuit boards and small robots}
         \resumeItemListEnd
 
     \resumeSubheadingTwo
