--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Large Andrew Li}} & \href{mailto:li.andrew.hua@gmail.com}{li.andrew.hua@gmail.com}\\
-  & 703-457-0020 \\
+  & 703-457-0020 \\ & \url{https://friendlyai.github.io/}
 \end{tabular*}
 
 
@@ -121,12 +121,6 @@
                 \resumeItem{CS 2150 Program and Data Representation, CS 4710 Artificial Intelligence}
               \resumeItemListEnd
       \resumeItemListEnd
-      
-    \resumeSubheadingTwo
-      {Launch Academy at HackCville (2019 - Present)}{}
-      \resumeItemListStart
-        \resumeItem{Studied and applied data science skills through hands-on projects in a selective 16-week intensive program}
-      \resumeItemListEnd
 
     \resumeSubheadingTwo
       {Oakton High School (2015 - 2019)}{4.60 / 4.00}
@@ -140,6 +134,15 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
+  
+    \resumeSubheadingTwo
+      {Data Science Intern / JHU Applied Physics Laboratory / Laurel, MD}{June 2020 - August 2020}
+      \resumeItemListStart
+        \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
+        \resumeItem{Proposed and led a COVID-10 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
+        \resumeItem{Presented results to a team of engineers across the APL network and work was scouted for further implementation with the APL's ESSENCE health surveillance tool}
+      \resumeItemListEnd
+      
     \resumeSubheadingTwo
       {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
       \resumeItemListStart
@@ -148,19 +151,25 @@
         \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
       \resumeItemListEnd
 
-    \resumeSubheadingTwo
-      {Software Engineering Intern / LendingPad / McLean, VA}{Jan 2019 - May 2019}
-      \resumeItemListStart
-        \resumeItem{Developed AI to automate the processing and organization of customer reviews}
-        \resumeItem{Designed and trained a custom neural network to perform sentiment analysis in Python using Tensorflow}
-        \resumeItem{Achieved 90\% accuracy, exceeding human accuracy when analyzing sentiment}
-      \resumeItemListEnd
+    % \resumeSubheadingTwo
+    %   {Software Engineering Intern / LendingPad / McLean, VA}{Jan 2019 - May 2019}
+    %   \resumeItemListStart
+    %     \resumeItem{Developed AI to automate the processing and organization of customer reviews}
+    %     \resumeItem{Designed and trained a custom neural network to perform sentiment analysis in Python using Tensorflow}
+    %     \resumeItem{Achieved 90\% accuracy, exceeding human accuracy when analyzing sentiment}
+    %   \resumeItemListEnd
       
   \resumeSubHeadingListEnd
 
 %-----------ACADEMIC EXPERIENCE-----------------
 \section{Extracurriculars}
   \resumeSubHeadingListStart
+    \resumeSubheadingTwo
+      {Competitor / UVA Moot Court}{Sept 2019 - Present}
+        \resumeItemListStart
+            \resumeItem{Wrote and argued complex Constitutional law cases to panels of judges}
+            \resumeItem{Only team from UVA to break into the round of 16 at Liberty University 2019}
+        \resumeItemListEnd
         
     \resumeSubheadingTwo
       {Team Captain / Team America Rocketry Challenge}{Sept 2016 - June 2019}
@@ -169,28 +178,33 @@
             \resumeItem{Placed 14th in national rocketry competition finals}
         \resumeItemListEnd
         
-     \resumeSubheadingTwo
-      {President / High School Digital Electronics Club}{Sept 2018 - June 2019}
-        \resumeItemListStart
-            \resumeItem{Developed intelligent light-following robots for Johns Hopkins University Engineering Program}
-            \resumeItem{Led a group of 15 students to learn, design, and build printed circuit boards and small robots}
-        \resumeItemListEnd
+    %  \resumeSubheadingTwo
+    %   {President / High School Digital Electronics Club}{Sept 2018 - June 2019}
+    %     \resumeItemListStart
+    %         \resumeItem{Developed intelligent light-following robots for Johns Hopkins University Engineering Program}
+    %         \resumeItem{Led a group of 15 students to learn, design, and build printed circuit boards and small robots}
+    %     \resumeItemListEnd
 
-    \resumeSubheadingTwo
-      {Team Captain / American Computer Science League}{Nov 2015 - June 2019}
-        \resumeItemListStart
-            \resumeItem{Organized and tutored students to compete in CS competition focusing on CS theory and algorithms}
-            \resumeItem{Competed in finals (top 20 teams internationally) for two years}
-        \resumeItemListEnd
+    % \resumeSubheadingTwo
+    %   {Team Captain / American Computer Science League}{Nov 2015 - June 2019}
+    %     \resumeItemListStart
+    %         \resumeItem{Organized and tutored students to compete in CS competition focusing on CS theory and algorithms}
+    %         \resumeItem{Competed in finals (top 20 teams internationally) for two years}
+    %     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
+    \resumeSubheadingTwo{ctaff + rizumu}{}
+        \resumeItemListStart
+            \resumeItem{ctaff: Developed algorithms to detect rhythm and beats in music using Fourier transforms and audio signal processing}
+            \resumeItem{rizumu: Built a fully-featured cross-platform rhythm game using ctaff that allows automatic generation of beat maps for any song}
+        \resumeItemListEnd
     \resumeSubheadingTwo{Pystation}{}
         \resumeItemListStart
-            \resumeItem{Built a public internet radio station and cross-platform DJ software using the Shout protocol}
+            \resumeItem{Built a public internet radio station and lightweight DJ software using the Shout protocol}
             \resumeItem{Features cross-platform usability and powerful controls for DJs, including a 24/7 offline bot streamer}
         \resumeItemListEnd
     \resumeSubheadingTwo{Toxical}{}
@@ -225,7 +239,7 @@
 %--------SKILLS------------
 \section{Programming Skills}
  \resumeSubHeadingListStart
-    \resumeSubItem{\textbf{Python, Java, C/C++, HTML, CSS, JavaScript, SQL, TensorFlow, Linux, Git}}{}
+    \resumeSubItem{\textbf{Python, Java, C/C++, HTML/CSS, JavaScript, SQL, TensorFlow, Git}}{}
  \resumeSubHeadingListEnd
 %-------------------------------------------
 \end{document}
