Rename + gitignore for latex

--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -116,10 +116,10 @@
       \resumeItemListStart
         \resumeItem{B.S. Computer Science (Expected May 2023)}
         \resumeItem{B.A. Economics (Expected May 2023)}
-        \resumeItem{Relevant coursework:}
-              \resumeItemListStart
-                \resumeItem{CS 2150 Program and Data Representation, CS 4710 Artificial Intelligence}
-              \resumeItemListEnd
+        % \resumeItem{Relevant coursework:}
+        %       \resumeItemListStart
+        %         \resumeItem{CS 2150 Program and Data Representation, CS 4710 Artificial Intelligence}
+        %       \resumeItemListEnd
       \resumeItemListEnd
 
     \resumeSubheadingTwo
