--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -136,6 +136,13 @@
   \resumeSubHeadingListStart
   
     \resumeSubheadingTwo
+      {Research Assistant / University of Virginia / Charlottesville, VA}{August 2020 - Present}
+      \resumeItemListStart
+        \resumeItem{Designed and developed secure and usable Voice Personal Assistant software that improves privacy controls on current industry standards like Amazon Alexa}
+        \resumeItem{Explored security and privacy vulnerabilities is Voice Personal Assistants to publish in research}
+      \resumeItemListEnd
+
+    \resumeSubheadingTwo
       {Data Science Intern / JHU Applied Physics Laboratory / Laurel, MD}{June 2020 - August 2020}
       \resumeItemListStart
         \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
