--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -103,8 +103,10 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{{\Large Andrew Li}} & \href{mailto:li.andrew.hua@gmail.com}{li.andrew.hua@gmail.com}\\
-  & 703-457-0020 \\ & \url{https://friendlyai.github.io/}
+  \textbf{{\Large Andrew Li}} & 
+  \href{mailto:li.andrew.hua@gmail.com}{li.andrew.hua@gmail.com} \\ & 
+  703-457-0020 \\ & 
+  \url{https://friendlyai.github.io/}
 \end{tabular*}
 
 
@@ -112,18 +114,19 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheadingTwo
-      {University of Virginia (2019 - 2023)}{3.98 / 4.00}
+      {University of Virginia (2019 - 2023)}{3.99 / 4.00}
       \resumeItemListStart
         \resumeItem{B.S. Computer Science (Expected May 2023)}
         \resumeItem{B.A. Economics (Expected May 2023)}
         % \resumeItem{Relevant coursework:}
         %       \resumeItemListStart
-        %         \resumeItem{CS 2150 Program and Data Representation, CS 4710 Artificial Intelligence}
+        %         \resumeItem{Economics of Sustainability and the Environment, Economics of Risk and Uncertainty, Intermediate Micro/Macroeconomics}
+        %         \resumeItem{Science and Technology Policy for Interns, Introduction to Cybersecurity}
         %       \resumeItemListEnd
       \resumeItemListEnd
 
-    \resumeSubheadingTwo
-      {Oakton High School (2015 - 2019)}{4.60 / 4.00}
+    % \resumeSubheadingTwo
+    %   {Oakton High School (2015 - 2019)}{4.60 / 4.00}
     %   \resumeItemListStart
     %     \resumeItem{AP Computer Science A | Advanced Computer Science AB}
     %     \resumeItem{Multivariable Calculus | Linear Algebra}
@@ -138,7 +141,7 @@
     \resumeSubheadingTwo
       {Research Assistant / University of Virginia / Charlottesville, VA}{August 2020 - Present}
       \resumeItemListStart
-        \resumeItem{Designed and developed secure and usable Voice Personal Assistant software that improves privacy controls on current industry standards like Amazon Alexa}
+        \resumeItem{Designed and developed secure and usable Voice Personal Assistant software in C++ and Python that improves privacy controls on current industry standards like Amazon Alexa}
         \resumeItem{Explored security and privacy vulnerabilities is Voice Personal Assistants to publish in research}
       \resumeItemListEnd
 
@@ -146,14 +149,14 @@
       {Data Science Intern / JHU Applied Physics Laboratory / Laurel, MD}{June 2020 - August 2020}
       \resumeItemListStart
         \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
-        \resumeItem{Proposed and led a COVID-10 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
+        \resumeItem{Proposed and led a COVID-19 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
         \resumeItem{Presented results to a team of engineers across the APL network and work was scouted for further implementation with the APL's ESSENCE health surveillance tool}
       \resumeItemListEnd
       
     \resumeSubheadingTwo
       {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
       \resumeItemListStart
-        \resumeItem{Developed SQL databases and front-end software in MS Access to log network activity and outages}
+        \resumeItem{Developed SQL databases and front-end software in Microsoft Access to log network activity and outages}
         \resumeItem{Built a custom desktop application to create, archive, and synchronize customer quotes and sales across company computers}
         \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
       \resumeItemListEnd
