--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -118,6 +118,9 @@
       \resumeItemListStart
         \resumeItem{B.S. Computer Science (Expected May 2023)}
         \resumeItem{B.A. Economics (Expected May 2023)}
+          \resumeItemListStart
+            \resumeItem{Concentration in Public Policy}
+          \resumeItemListEnd
         % \resumeItem{Relevant coursework:}
         %       \resumeItemListStart
         %         \resumeItem{Economics of Sustainability and the Environment, Economics of Risk and Uncertainty, Intermediate Micro/Macroeconomics}
@@ -139,6 +142,23 @@
   \resumeSubHeadingListStart
   
     \resumeSubheadingTwo
+      {Policy Research Intern / Environmental Law Institute / Washington, DC}{June 2021 - Present}
+      \resumeItemListStart
+        \resumeItem{Researched and wrote a comprehensive literature review on the positive and negative effects of the Internet of Things on the environment}
+        \resumeItem{Proposed policy and governance recommendations and presented findings to staff}
+        \resumeItem{Wrote multiple papers to be published in ELI publications and online}
+        \resumeItem{Constructed a bibliographic analysis of 22k research publications in the field of AI and the environment, reporting findings to a team of researchers at ELI, Yale, and Berkeley}
+      \resumeItemListEnd
+
+    \resumeSubheadingTwo
+      {Research Assistant / Wilson Center / Washington, DC}{June 2021 - Present}
+      \resumeItemListStart
+        \resumeItem{Worked one-on-one with a scholar to support research on China's role in international standard setting}
+        \resumeItem{Composed multiple short essays on China-US relations and technological decoupling}
+        \resumeItem{Read and analyzed papers in both Chinese and English language to create a comparative analysis of international perspectives on decoupling and the COVID-19 pandemic}
+      \resumeItemListEnd
+
+    \resumeSubheadingTwo
       {Research Assistant / University of Virginia / Charlottesville, VA}{August 2020 - Present}
       \resumeItemListStart
         \resumeItem{Designed and developed secure and usable Voice Personal Assistant software in C++ and Python that improves privacy controls on current industry standards like Amazon Alexa}
@@ -153,13 +173,13 @@
         \resumeItem{Presented results to a team of engineers across the APL network and work was scouted for further implementation with the APL's ESSENCE health surveillance tool}
       \resumeItemListEnd
       
-    \resumeSubheadingTwo
-      {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
-      \resumeItemListStart
-        \resumeItem{Developed SQL databases and front-end software in Microsoft Access to log network activity and outages}
-        \resumeItem{Built a custom desktop application to create, archive, and synchronize customer quotes and sales across company computers}
-        \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
-      \resumeItemListEnd
+    % \resumeSubheadingTwo
+    %   {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
+    %   \resumeItemListStart
+    %     \resumeItem{Developed SQL databases and front-end software in Microsoft Access to log network activity and outages}
+    %     \resumeItem{Built a custom desktop application to create, archive, and synchronize customer quotes and sales across company computers}
+    %     \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
+    %   \resumeItemListEnd
 
     % \resumeSubheadingTwo
     %   {Software Engineering Intern / LendingPad / McLean, VA}{Jan 2019 - May 2019}
@@ -182,11 +202,17 @@
         \resumeItemListEnd
         
     \resumeSubheadingTwo
-      {Team Captain / Team America Rocketry Challenge}{Sept 2016 - June 2019}
+      {Guest Writer / Virginia Review of Politics}{May 2021 - Present}
         \resumeItemListStart
-            \resumeItem{Led school rocketry team in designing, building, and flying model rockets up to 1000 ft. while carrying electronics}
-            \resumeItem{Placed 14th in national rocketry competition finals}
+            \resumeItem{Wrote and submitted guest articles on modern political theory published online}
         \resumeItemListEnd
+
+    % \resumeSubheadingTwo
+    %   {Team Captain / Team America Rocketry Challenge}{Sept 2016 - June 2019}
+    %     \resumeItemListStart
+    %         \resumeItem{Led school rocketry team in designing, building, and flying model rockets up to 1000 ft. while carrying electronics}
+    %         \resumeItem{Placed 14th in national rocketry competition finals}
+    %     \resumeItemListEnd
         
     %  \resumeSubheadingTwo
     %   {President / High School Digital Electronics Club}{Sept 2018 - June 2019}
@@ -207,20 +233,21 @@
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
-    \resumeSubheadingTwo{ctaff + rizumu}{}
-        \resumeItemListStart
-            \resumeItem{ctaff: Developed algorithms to detect rhythm and beats in music using Fourier transforms and audio signal processing}
-            \resumeItem{rizumu: Built a fully-featured cross-platform rhythm game using ctaff that allows automatic generation of beat maps for any song}
-        \resumeItemListEnd
-    \resumeSubheadingTwo{Pystation}{}
-        \resumeItemListStart
-            \resumeItem{Built a public internet radio station and lightweight DJ software using the Shout protocol}
-            \resumeItem{Features cross-platform usability and powerful controls for DJs, including a 24/7 offline bot streamer}
-        \resumeItemListEnd
+    % \resumeSubheadingTwo{ctaff + rizumu}{}
+    %     \resumeItemListStart
+    %         \resumeItem{ctaff: Developed algorithms to detect rhythm and beats in music using Fourier transforms and audio signal processing}
+    %         \resumeItem{rizumu: Built a fully-featured cross-platform rhythm game using ctaff that allows automatic generation of beat maps for any song}
+    %     \resumeItemListEnd
+    % \resumeSubheadingTwo{Pystation}{}
+    %     \resumeItemListStart
+    %         \resumeItem{Built a public internet radio station and lightweight DJ software using the Shout protocol}
+    %         \resumeItem{Features cross-platform usability and powerful controls for DJs, including a 24/7 offline bot streamer}
+    %     \resumeItemListEnd
     \resumeSubheadingTwo{Toxical}{}
         \resumeItemListStart
             \resumeItem{Trained a neural network to automatically detect and moderate online conversations on platforms like Twitter and Discord}
             \resumeItem{Developed a custom sentiment analysis algorithm that detects toxic comments with 80\% accuracy}
+            \resumeItem{Algorithm was used at JHU APL for COVID-19 sentiment analysis on Twitter}
         \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -247,9 +274,17 @@
 %   \resumeSubHeadingListEnd
 
 %--------SKILLS------------
-\section{Programming Skills}
+\section{Skills}
  \resumeSubHeadingListStart
-    \resumeSubItem{\textbf{Python, Java, C/C++, HTML/CSS, JavaScript, SQL, TensorFlow, Git}}{}
+    \resumeSubItem{Research and Analysis:}{Wrote research papers on complex topics including IoT, AI, and China-US relations that were used and published by the Environmental Law Institute and the Wilson Center}
+    \resumeSubItem{Project Management:}{Led project design by a team of interns modeling the COVID-19 pandemic in June 2020}
  \resumeSubHeadingListEnd
-%-------------------------------------------
+%--------------------------
+
+%--------SKILLS------------
+% \section{Programming Skills}
+%  \resumeSubHeadingListStart
+%     \resumeSubItem{\textbf{Python, Java, C/C++, HTML/CSS, JavaScript, SQL, TensorFlow, Git}}{}
+%  \resumeSubHeadingListEnd
+%--------------------------
 \end{document}
