--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -142,8 +142,9 @@
   \resumeSubHeadingListStart
   
     \resumeSubheadingTwo
-      {Policy Research Intern / Environmental Law Institute / Washington, DC}{June 2021 - Present}
+      {Policy Research Intern / Environmental Law Institute / Washington, DC}{June 2021 - August 2021}
       \resumeItemListStart
+        \resumeItem{Research was featured as the lead article in the Environmental Forum's March-April 2022 issue}
         \resumeItem{Researched and wrote a comprehensive literature review on the positive and negative effects of the Internet of Things on the environment}
         \resumeItem{Proposed policy and governance recommendations and presented findings to staff}
         \resumeItem{Wrote multiple papers to be published in ELI publications and online}
@@ -151,7 +152,7 @@
       \resumeItemListEnd
 
     \resumeSubheadingTwo
-      {Research Assistant / Wilson Center / Washington, DC}{June 2021 - Present}
+      {Research Assistant / Wilson Center / Washington, DC}{June 2021 - August 2021}
       \resumeItemListStart
         \resumeItem{Worked one-on-one with a scholar to support research on China's role in international standard setting}
         \resumeItem{Composed multiple short essays on China-US relations and technological decoupling}
