--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -120,6 +120,7 @@
         \resumeItem{B.A. Economics (Expected May 2023)}
           \resumeItemListStart
             \resumeItem{Concentration in Public Policy}
+            \resumeItem{Kenneth G. Elzinga Scholarship recipient}
           \resumeItemListEnd
         % \resumeItem{Relevant coursework:}
         %       \resumeItemListStart
@@ -144,7 +145,7 @@
     \resumeSubheadingTwo
       {Policy Research Intern / Environmental Law Institute / Washington, DC}{June 2021 - August 2021}
       \resumeItemListStart
-        \resumeItem{Research was featured as the lead article in the Environmental Forum's March-April 2022 issue}
+        \resumeItem{Research was published and featured as the lead article in the Environmental Forum's March-April 2022 issue}
         \resumeItem{Researched and wrote a comprehensive literature review on the positive and negative effects of the Internet of Things on the environment}
         \resumeItem{Proposed policy and governance recommendations and presented findings to staff}
         \resumeItem{Wrote multiple papers to be published in ELI publications and online}
@@ -246,7 +247,7 @@
     %     \resumeItemListEnd
     \resumeSubheadingTwo{Toxical}{}
         \resumeItemListStart
-            \resumeItem{Trained a neural network to automatically detect and moderate online conversations on platforms like Twitter and Discord}
+            \resumeItem{Trained a neural network to intelligently moderate online conversations on platforms like Twitter and Discord}
             \resumeItem{Developed a custom sentiment analysis algorithm that detects toxic comments with 80\% accuracy}
             \resumeItem{Algorithm was used at JHU APL for COVID-19 sentiment analysis on Twitter}
         \resumeItemListEnd
