--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -127,6 +127,7 @@
         %         \resumeItem{Economics of Sustainability and the Environment, Economics of Risk and Uncertainty, Intermediate Micro/Macroeconomics}
         %         \resumeItem{Science and Technology Policy for Interns, Introduction to Cybersecurity}
         %       \resumeItemListEnd
+      \resumeItem{LSAT: 179}
       \resumeItemListEnd
 
     % \resumeSubheadingTwo
@@ -143,7 +144,7 @@
   \resumeSubHeadingListStart
   
     \resumeSubheadingTwo
-      {Policy Research Intern / Environmental Law Institute / Washington, DC}{June 2021 - August 2021}
+      {Policy Research Intern / Environmental Law Institute}{June 2021 - August 2021}
       \resumeItemListStart
         \resumeItem{Research was published and featured as the lead article in the Environmental Forum's March-April 2022 issue}
         \resumeItem{Researched and wrote a comprehensive literature review on the positive and negative effects of the Internet of Things on the environment}
@@ -153,7 +154,7 @@
       \resumeItemListEnd
 
     \resumeSubheadingTwo
-      {Research Assistant / Wilson Center / Washington, DC}{June 2021 - August 2021}
+      {Research Assistant / Woodrow Wilson Center}{June 2021 - August 2021}
       \resumeItemListStart
         \resumeItem{Worked one-on-one with a scholar to support research on China's role in international standard setting}
         \resumeItem{Composed multiple short essays on China-US relations and technological decoupling}
@@ -161,14 +162,14 @@
       \resumeItemListEnd
 
     \resumeSubheadingTwo
-      {Research Assistant / University of Virginia / Charlottesville, VA}{August 2020 - Present}
+      {Research Assistant / University of Virginia}{August 2020 - Present}
       \resumeItemListStart
         \resumeItem{Designed and developed secure and usable Voice Personal Assistant software in C++ and Python that improves privacy controls on current industry standards like Amazon Alexa}
         \resumeItem{Explored security and privacy vulnerabilities is Voice Personal Assistants to publish in research}
       \resumeItemListEnd
 
     \resumeSubheadingTwo
-      {Data Science Intern / JHU Applied Physics Laboratory / Laurel, MD}{June 2020 - August 2020}
+      {Data Science Intern / JHU Applied Physics Laboratory}{June 2020 - August 2020}
       \resumeItemListStart
         \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
         \resumeItem{Proposed and led a COVID-19 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
